# qweather

./: Dockerfile  README.md  app.py  docker-compose.yml  env_config  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
