[tool.poetry]
name = "qweather"
version = "0.1.0"
description = ""
authors = ["nigerninja <nigerninja>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.28.2"
influxdb = "5.3.1"

[tool.poetry.group.dev.dependencies]
requests = "2.28.2"
influxdb = "5.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
